--- a/_site.yml
+++ b/_site.yml
@@ -6,3 +6,7 @@ navbar:
       href: index.html
     - text: "About"
       href: about.html
+output:
+  html_document:
+    theme: yeti
+    highlight: textmate
